infrastructure/kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: kube-system
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: nginx
